# mb3d

web/: .gitignore  PORTING_STRATEGY.md  build.py  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
web/.github/: copilot-instructions.md
web/assets/styles/: mb3d.css
web/src/: main.js  main.ts
web/src/components/app/: mb3d-app.js  mb3d-app.ts
web/src/components/color/: mb3d-color-picker.js  mb3d-color-picker.ts
web/src/components/controls/: mb3d-controls.js  mb3d-controls.ts
web/src/components/formulas/: mb3d-formula-panel.js  mb3d-formula-panel.ts
web/src/components/lighting/: mb3d-light-editor.js  mb3d-light-editor.ts
web/src/components/navigator/: mb3d-navigator.js  mb3d-navigator.ts
web/src/components/viewer/: mb3d-viewer.js  mb3d-viewer.ts
web/src/core/engine/: state.js  state.ts  worker_pool.js  worker_pool.ts
web/src/core/types/: header.js  header.ts  params.js  params.ts
web/src/wasm/: Cargo.toml
web/src/wasm/src/: lib.rs
web/src/wasm/src/engine/: mod.rs  raymarcher.rs  types.rs
web/src/wasm/src/formulas/: builtin.rs  hybrid.rs  mod.rs
web/src/wasm/src/lighting/: gradient.rs  mod.rs  paint.rs
web/src/wasm/src/math/: math3d.rs  mod.rs  utils.rs
web/src/workers/: calc-worker.js  calc-worker.ts
web/tests/: test_build.py  test_module_graph.py  test_project_config.py  test_wasm_crate.py
