[package]
name = "mb3d-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Mandelbulb3D Web Contributors"]
description = "High-performance fractal computation engine for Mandelbulb3D Web"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
